--- a/super-admin.html
+++ b/super-admin.html
@@ -144,6 +144,46 @@
         gap: 1rem;
       }
 
+      .sa-table-wrap {
+        border: 1px solid #dbeafe;
+        border-radius: 12px;
+        background: #fff;
+        overflow: auto;
+        max-height: 420px;
+      }
+
+      .sa-table {
+        width: 100%;
+        border-collapse: collapse;
+        font-size: 0.92rem;
+      }
+
+      .sa-table th,
+      .sa-table td {
+        border-bottom: 1px solid #e2e8f0;
+        padding: 0.55rem 0.65rem;
+        text-align: left;
+        vertical-align: top;
+      }
+
+      .sa-table th {
+        background: #eff6ff;
+        font-weight: 700;
+        color: #1e3a8a;
+        position: sticky;
+        top: 0;
+      }
+
+      .sa-table tr:hover td {
+        background: #f8fafc;
+      }
+
+      .sa-empty {
+        margin: 0;
+        padding: 0.75rem;
+        color: #64748b;
+      }
+
       #saStatus {
         font-weight: 600;
       }
@@ -204,7 +244,9 @@
             </select>
             <button type="submit">Преглед</button>
           </form>
-          <pre id="saTableOutput" class="json-box">Няма данни.</pre>
+          <div id="saTableOutput" class="sa-table-wrap">
+            <p class="sa-empty">Няма данни.</p>
+          </div>
         </div>
 
         <div>
@@ -230,6 +272,7 @@
       let refreshTimer = null;
       let apiBaseUrl = localStorage.getItem('apiBaseUrl') || `${window.location.protocol}//${window.location.hostname}:4000`;
       let previousTenantSnapshot = new Map();
+      let tenantNameById = new Map();
       apiUrlInput.value = apiBaseUrl;
 
       function setStatus(text, ok = true) {
@@ -340,6 +383,7 @@
 
       function renderTenants(payload) {
         const tenants = payload.tenants || [];
+        tenantNameById = new Map(tenants.map((tenant) => [String(tenant.id), tenant.name || '—']));
         if (!tenants.length) {
           tenantsEl.innerHTML = '<div class="sa-tenant"><small>Няма регистрирани фирми.</small></div>';
           return;
@@ -389,6 +433,101 @@
         logsEl.textContent = JSON.stringify(payload.logs || [], null, 2);
       }
 
+      function prettifyColumnName(column) {
+        const labels = {
+          tenant_id: 'Фирма',
+          tenantid: 'Фирма',
+          company_id: 'Фирма',
+          companyid: 'Фирма',
+          created_at: 'Създадена',
+          updated_at: 'Обновена',
+          approved_at: 'Одобрена',
+          deleted_at: 'Изтрита',
+          full_name: 'Име',
+          first_name: 'Име',
+          last_name: 'Фамилия',
+          phone_number: 'Телефон',
+          email_address: 'Имейл',
+          user_id: 'Потребител',
+          role_id: 'Роля',
+          schedule_id: 'График',
+          department_id: 'Отдел',
+          shift_template_id: 'Шаблон смяна',
+        };
+
+        const key = String(column || '')
+          .replace(/([a-z])([A-Z])/g, '$1_$2')
+          .toLowerCase();
+        if (labels[key]) {
+          return labels[key];
+        }
+
+        const normalized = key.replaceAll('_', ' ').trim();
+        return normalized ? normalized[0].toUpperCase() + normalized.slice(1) : String(column || '');
+      }
+
+      function isTenantKey(key) {
+        const normalized = String(key || '')
+          .replace(/([a-z])([A-Z])/g, '$1_$2')
+          .toLowerCase();
+        return normalized === 'tenant_id' || normalized === 'tenantid' || normalized === 'company_id' || normalized === 'companyid';
+      }
+
+      function formatTableValue(key, value) {
+        if (value === null || value === undefined || value === '') {
+          return '—';
+        }
+
+        if (isTenantKey(key)) {
+          return tenantNameById.get(String(value)) || `Непозната фирма (${value})`;
+        }
+
+        if (typeof value === 'boolean') {
+          return value ? 'Да' : 'Не';
+        }
+
+        if (typeof value === 'object') {
+          return JSON.stringify(value);
+        }
+
+        const keyName = String(key || '').toLowerCase();
+        if (keyName.includes('date') || keyName.endsWith('at')) {
+          return fmtDate(value);
+        }
+
+        return String(value);
+      }
+
+      function renderTableRows(tableName, rows) {
+        if (!rows.length) {
+          tableOutput.innerHTML = '<p class="sa-empty">Няма данни в избраната таблица.</p>';
+          return;
+        }
+
+        const allColumns = Array.from(
+          rows.reduce((set, row) => {
+            Object.keys(row || {}).forEach((key) => {
+              if (!(tableName === 'tenants' && key === 'id')) {
+                set.add(key);
+              }
+            });
+            return set;
+          }, new Set()),
+        );
+
+        const tableHeader = allColumns.map((column) => `<th>${escapeHtml(prettifyColumnName(column))}</th>`).join('');
+        const tableBody = rows
+          .map((row) => {
+            const cells = allColumns
+              .map((column) => `<td>${escapeHtml(formatTableValue(column, row[column]))}</td>`)
+              .join('');
+            return `<tr>${cells}</tr>`;
+          })
+          .join('');
+
+        tableOutput.innerHTML = `<table class="sa-table"><thead><tr>${tableHeader}</tr></thead><tbody>${tableBody}</tbody></table>`;
+      }
+
       async function refreshOverview(isAuto = false) {
         try {
           const payload = await apiRequest('/api/platform/super-admin/overview');
@@ -432,8 +571,9 @@
       tableForm.addEventListener('submit', async (event) => {
         event.preventDefault();
         try {
-          const payload = await apiRequest(`/api/platform/super-admin/tables/${encodeURIComponent(tableNameInput.value)}`);
-          tableOutput.textContent = JSON.stringify(payload.rows || [], null, 2);
+          const tableName = tableNameInput.value;
+          const payload = await apiRequest(`/api/platform/super-admin/tables/${encodeURIComponent(tableName)}`);
+          renderTableRows(tableName, payload.rows || []);
           setStatus('Таблицата е заредена.');
         } catch (error) {
           setStatus(error.message, false);
