--- a/index.html
+++ b/index.html
@@ -428,6 +428,7 @@
 
     </div>
 
-    <script src="app.js"></script>
+    <script src="./app.js"></script>
+    <script src="./welcome.js"></script>
   </body>
 </html>
