Improve warning status visibility with toast popup

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <header>
       <h1>Планиране на смени</h1>
       <p>Управление на отдели, длъжности, графици, отпуски и болнични.</p>
-      <small id="storageStatus" class="status-warn">Проверка за PostgreSQL бекенд...</small>
+      <small id="storageStatus" class="status-toast status-warn status-toast-visible">Проверка за PostgreSQL бекенд...</small>
       <div class="api-config">
         <label for="apiUrlInput">API URL:</label>
         <input id="apiUrlInput" type="text" placeholder="http://46.183.117.128:4000" />
